@@ -59,9 +59,8 @@ function cerca_toggle(){
     if (!wp_is_mobile()){ ?>
 
     <script type="text/javascript">
-        equalize_cards();
+        addFunction_onload(equalize_cards);
     </script>
-    
 <?php } ?>
 
 <?php
